airgap/kubernetes/01-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: step-infra
---
apiVersion: v1
kind: Namespace
metadata:
  name: step-apps
