airgap/kubernetes/05-apps.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: harvest
  namespace: step-apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: harvest
  template:
    metadata:
      labels:
        app: harvest
    spec:
      imagePullSecrets:
        - name: gitea-pull-secret
      tolerations:
        - key: "node-role.kubernetes.io/master"
          operator: "Exists"
          effect: "NoSchedule"
      containers:
        - name: harvest
          image: gitea.gitea:3000/admin/harvest:latest
          imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: windmill
  namespace: step-apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: windmill
  template:
    metadata:
      labels:
        app: windmill
    spec:
      imagePullSecrets:
        - name: gitea-pull-secret
      tolerations:
        - key: "node-role.kubernetes.io/master"
          operator: "Exists"
          effect: "NoSchedule"
      containers:
        - name: windmill
          image: gitea.gitea:3000/admin/windmill:latest
          imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-portal
  namespace: step-apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-portal
  template:
    metadata:
      labels:
        app: admin-portal
    spec:
      imagePullSecrets:
        - name: gitea-pull-secret
      tolerations:
        - key: "node-role.kubernetes.io/master"
          operator: "Exists"
          effect: "NoSchedule"
      containers:
        - name: admin-portal
          image: gitea.gitea:3000/admin/admin-portal:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: admin-portal
  namespace: step-apps
spec:
  selector:
    app: admin-portal
  ports:
    - port: 80
      targetPort: 8000
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-prefix
  namespace: step-apps
spec:
  stripPrefix:
    prefixes:
      - /hasura
---
apiVersion: v1
kind: Service
metadata:
  name: hasura
  namespace: step-apps
spec:
  selector:
    app: hasura
  ports:
    - port: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hasura
  namespace: step-apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hasura
  template:
    metadata:
      labels:
        app: hasura
    spec:
      imagePullSecrets:
        - name: gitea-pull-secret
      tolerations:
        - key: "node-role.kubernetes.io/master"
          operator: "Exists"
          effect: "NoSchedule"
      containers:
        - name: hasura
          image: hasura/graphql-engine:v2.33.1.cli-migrations-v3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
